<resources>
    <string name="app_name" translatable="false">test</string>
    <string name="startpage">Home</string>
    <string name="subscriptions">Feed</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="full_local_mode_desc">LibreTube is a privacy-friendly, local-only YouTube client. Your information stays on your device.</string>
    <string name="suggest_change_instance">Instances are disabled in local-only mode.</string>
    <string name="uptime">Uptime unavailable</string>
    <string name="change_region">No trending videos found for this region. Try another one?</string>
    <string name="search_hint">Search</string>
    <string name="videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="region">Region</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="importsuccess">Subscribed</string>
    <string name="downloadfailed">Download failed.</string>
    <string name="import_from_yt">Import subscriptions</string>
    <string name="import_from_yt_summary">From YouTube or NewPipe</string>
    <string name="app_theme">Theme</string>
    <string name="fail">Failed :(</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="success">Done.</string>
    <string name="server_error">An error occurred while contacting the server.</string>
    <string name="error">Something went wrong.</string>
    <string name="unknown_error">Network error.</string>
    <string name="emptyList">Nothing here.</string>
    <string name="about">About</string>
    <string name="version_format">Version: %1$s</string>
    <string name="systemDefault">System</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="customization">Adjustments</string>
    <string name="website">Website</string>
    <string name="uploaderAndVideoCount">%1$s • %2$d videos</string>
    <string name="subscriberAndVideoCounts">%1$s subscribers • %2$d videos</string>
    <string name="videoCount">%1$d videos</string>
    <string name="noInternet">Connect to the Internet first.</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="replies">Replies</string>
    <string name="channels">Channels</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="playlists">Playlists</string>
    <string name="okay">OK</string>
    <string name="finished">Finished</string>
    <string name="filter_list">Filter</string>
    <string name="history">History</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="music_songs">YT Music Songs</string>
    <string name="music_videos">YT Music Videos</string>
    <string name="music_albums">YT Music Albums</string>
    <string name="music_playlists">YT Music Playlists</string>
    <string name="music_artists">YT Music Artists</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="sponsorblock_summary">Uses the https://sponsor.ajay.app API</string>
    <string name="segment_skipped">Skipped segment</string>
    <string name="category_segments">Segments</string>
    <string name="category_sponsor">Sponsor</string>
    <string name="category_sponsor_summary">Paid promotion, paid referrals and direct advertisements. Not for self-promotion or free genuine shoutouts to causes, creators, websites, and products</string>
    <string name="category_selfpromo">Unpaid/Self Promotion</string>
    <string name="category_selfpromo_summary">Similar to \"sponsor\" except for unpaid or self promotion. This includes sections about merchandise, donations, or info about who they collaborated with</string>
    <string name="category_interaction">Interaction reminder</string>
    <string name="category_interaction_summary">When there is a short reminder to like, subscribe or follow in the middle of content. If long or about something specific, it should instead be self promotion</string>
    <string name="category_intro">Intermission/Intro Animation</string>
    <string name="category_intro_summary">An interval without actual content. Could be a pause, static frame, repeating animation. Should not be used for transitions containing info</string>
    <string name="category_outro">End cards and credits</string>
    <string name="category_outro_summary">Info following the ending. Not for conclusions with info</string>
    <string name="category_filler">Filler Tangent/Jokes</string>
    <string name="category_filler_summary">For tangential scenes added only for filler or humor not required to understand the main content of the video</string>
    <string name="category_music_offtopic">Music: Non-Music Section</string>
    <string name="category_music_offtopic_summary">Only for use in music videos. It should cover parts of the video not part of official mixes. In the end, the video should resemble the Spotify or any other mixed version as closely as possible, or reduce talking or other distractions</string>
    <string name="category_preview">Preview/Recap</string>
    <string name="category_preview_summary">For segments detailing future content without additional info. If it includes clips that only appear here, this is very likely the wrong category</string>
    <string name="category_highlight">Show video highlight</string>
    <string name="category_highlight_summary">Could either be the advertised title, the thumbnail or the most interesting part of the video. You can skip to it by tapping on it in the chapters section</string>
    <string name="category_exclusive_access">Exclusive Access</string>
    <string name="category_hook">Hook/Greetings</string>
    <string name="category_hook_summary">For narrative hooks that grab the viewer\'s attention (often as the first scene) by teasing or describing events from later in the same video or future episodes in a series</string>
    <string name="license">License</string>
    <string name="color_accent">Accents</string>
    <string name="color_red">Resting red</string>
    <string name="color_blue">Blissful blue</string>
    <string name="color_yellow">Yeeting yellow</string>
    <string name="color_green">Groovy green</string>
    <string name="color_purple">Pleasurable purple</string>
    <string name="material_you">Material You</string>
    <string name="sponsorblock_notifications">Notifications</string>
    <string name="app_icon">Icon</string>
    <string name="enabled">On</string>
    <string name="disabled">Off</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="playOnBackground">Play in the background</string>
    <string name="update_available">Update available</string>
    <string name="appearance">Appearance</string>
    <string name="downloads">Downloads</string>
    <string name="update_summary">Check for update</string>
    <string name="update_check_frequency">Update check frequency</string>
    <string name="battery_drain_warning_title">Battery Drain Warning</string>
    <string name="advanced">Advanced</string>
    <string name="player">Player</string>
    <string name="appearance_summary">Adjust the app to your liking</string>
    <string name="version">Version %1$s</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="concurrent_downloads">Max concurrent downloads</string>
    <string name="player_summary">Defaults and behavior</string>
    <string name="reset">Restore defaults</string>
    <string name="reset_message">Reset all settings and data?</string>
    <string name="navLabelVisibility">Label visibility</string>
    <string name="data_saver_mode">Bandwidth saver</string>
    <string name="data_saver_mode_summary">Skip thumbnails and other images to save bandwidth</string>
    <string name="history_summary">Watch and search history</string>
    <string name="captions">Captions</string>
    <string name="general">General</string>
    <string name="general_summary">Downloads and bandwidth usage</string>
    <string name="notifications">Notifications</string>
    <string name="misc">Misc</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="maximum_image_cache">Max image cache size</string>
    <string name="new_videos_badge">Indicator for new videos</string>
    <string name="new_videos_badge_summary">Show a badge with the amount of new videos if there are some</string>
    <string name="sb_custom_colors_summary">Toggles custom color segments for SponsorBlock segments</string>
    <string name="sb_custom_colors">Custom segment colors</string>
    <string name="color">Color</string>
    <string name="navbar_order">Navigation bar buttons</string>
    <string name="navbar_order_summary">Reorder or hide buttons on the bottom navigation bar</string>
    <string name="dearrow">Enable DeArrow</string>
    <string name="dearrow_summary">Show more accurate and less sensationalist titles and thumbnails. Increases loading times</string>
    <string name="dearrow_titles">DeArrow titles</string>
    <string name="dearrow_titles_summary">Use DeArrow for video titles</string>
    <string name="dearrow_thumbnails">DeArrow thumbnails</string>
    <string name="dearrow_thumbnails_summary">Use DeArrow for video thumbnails</string>
    <string name="dearrow_exemption_live">Exempt live videos</string>
    <string name="dearrow_exemption_live_summary">Always use original thumbnails for live videos</string>
    <string name="contribute_to_dearrow">Contribute to DeArrow</string>
    <string name="show_updates_summary">Periodically check for new versions of the app</string>
    <string name="show_updates">Automatic update checks</string>
    <string name="contribute_to_sponsorblock">Contribute to SponsorBlock</string>
    <string name="external_download_provider">External download provider</string>
    <string name="external_download_provider_summary">Enter the package name of the app you want to use for downloading videos. Leave blank to use LibreTube\'s inbuilt downloader.</string>
    <string name="local_ryd">Local Return Youtube Dislike extractor</string>
    <string name="local_ryd_summary">Directly fetch dislike information from https://returnyoutubedislikeapi.com</string>
    <string name="link_handling_desc">Configure how YouTube links are opened.</string>
    <string name="set_as_default_app">Set as default app</string>
    <string name="content_settings">Content</string>
    <string name="content_settings_summary">History, SponsorBlock, and DeArrow</string>
    <string name="data_backup">Data &amp; backup</string>
    <string name="data_backup_summary">Manage backups and local store usage</string>
    <string name="notification_summary">Update checks and stream notifications</string>
    <string name="storage">Storage</string>
    <string name="view_logs">View Logs</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="action_close">Close</string>
    <string name="download_path_summary">Choose where to store your downloads</string>
    <string name="media_visible">Media Visible</string>
    <string name="media_visible_summary">Make downloaded files visible to other media players</string>
    <string name="select_quality">Select Quality</string>
    <string name="select_language">Select Language</string>
</resources>