<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/general">

        <com.github.libretube.test.ui.preferences.SeekBarPreference
            android:key="max_parallel_downloads"
            android:max="10"
            android:title="@string/concurrent_downloads"
            app:min="1" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/storage">

        <EditTextPreference
            android:key="external_download_provider"
            android:title="@string/external_download_provider"
            android:summary="@string/external_download_provider_summary"/>



        <!-- Media visibility -->
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="media_visible"
            android:title="@string/media_visible"
            android:summary="@string/media_visible_summary" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
