<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">






    <PreferenceCategory app:title="@string/advanced">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_download_filled"
            app:key="automatic_update_checks"
            app:summary="@string/show_updates_summary"
            app:title="@string/show_updates" />

        <ListPreference
            android:defaultValue="360"
            android:dependency="automatic_update_checks"
            android:entries="@array/checkingFrequency"
            android:entryValues="@array/checkingFrequencyValues"
            android:icon="@drawable/ic_history"
            app:key="checking_frequency"
            app:title="@string/update_check_frequency"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <Preference
            android:icon="@drawable/ic_open"
            app:key="set_default_app"
            app:title="@string/set_as_default_app"
            app:summary="@string/link_handling_desc" />

    </PreferenceCategory>
</PreferenceScreen>
