<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/video_title"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="4"
            android:textAlignment="viewStart" />

        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/video"
            android:textColor="?attr/colorPrimary" />

        <com.github.libretube.test.ui.views.DropdownMenu
            android:id="@+id/video_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hint="@string/select_quality"
            app:icon="@drawable/ic_video" />

        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/audio"
            android:textColor="?attr/colorPrimary" />

        <com.github.libretube.test.ui.views.DropdownMenu
            android:id="@+id/audio_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hint="@string/select_quality"
            app:icon="@drawable/ic_audio" />

        <TextView
            android:id="@+id/subtitle_label"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/captions"
            android:textColor="?attr/colorPrimary" />

        <com.github.libretube.test.ui.views.DropdownMenu
            android:id="@+id/subtitle_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/select_language"
            app:icon="@drawable/ic_caption" />

    </LinearLayout>
</ScrollView>

